# audiodecoder.2sf

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
audiodecoder.2sf/: addon.xml  addon.xml.in
audiodecoder.2sf/resources/: settings.xml
audiodecoder.2sf/resources/language/resource.language.af_za/: strings.po
audiodecoder.2sf/resources/language/resource.language.am_et/: strings.po
audiodecoder.2sf/resources/language/resource.language.ar_sa/: strings.po
audiodecoder.2sf/resources/language/resource.language.ast_es/: strings.po
audiodecoder.2sf/resources/language/resource.language.az_az/: strings.po
audiodecoder.2sf/resources/language/resource.language.be_by/: strings.po
audiodecoder.2sf/resources/language/resource.language.bg_bg/: strings.po
audiodecoder.2sf/resources/language/resource.language.bs_ba/: strings.po
audiodecoder.2sf/resources/language/resource.language.ca_es/: strings.po
audiodecoder.2sf/resources/language/resource.language.cs_cz/: strings.po
audiodecoder.2sf/resources/language/resource.language.cy_gb/: strings.po
audiodecoder.2sf/resources/language/resource.language.da_dk/: strings.po
debian/: changelog.in  control  copyright  rules
depends/common/zlib/: 02-disable-example-binaries.patch  03-install-pkgconfig-in-lib.patch  zlib.sha256  zlib.txt
lib/: kodi-psflib-note.txt  kodi-vio2sf-note.txt
lib/psflib/: CMakeLists.txt
lib/vio2sf/: CMakeLists.txt
src/: 2SFCodec.cpp  2SFCodec.h  CircularBuffer.h
(+68 files in other folders)
